# esp-dl

./: .gitignore
esp-dl/audio/common/: dl_audio_common.hpp
examples/human_face_recognition_live/: BENCHMARK_3DAY.md  BENCHMARK_REPORT.md  CMakeLists.txt  IMPROVEMENT_PLAN.md  NEXT_STEPS.md  PPA_BENCHMARK_REPORT.md  README.md  TEST_LOG.md  partitions.csv  partitions_ota.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4
examples/human_face_recognition_live/components/bsp_camera/: CMakeLists.txt  README.md  bsp_camera.c
examples/human_face_recognition_live/components/bsp_camera/include/: bsp_camera.h
examples/human_face_recognition_live/components/bsp_display/: CMakeLists.txt  README.md  bsp_display.c
examples/human_face_recognition_live/components/bsp_display/include/: bsp_display.h
examples/human_face_recognition_live/components/spiflash_fatfs/: Kconfig  README.md  spiflash_fatfs.cpp
examples/human_face_recognition_live/docs/: NEXT_STEPS.md  PPA_BENCHMARK_REPORT.md  RESOURCES_AND_HEADROOM.md
examples/human_face_recognition_live/main/: CMakeLists.txt  README.md  app_main.cpp  face_processor.cpp  face_processor.hpp  idf_component.yml  person_db.cpp  person_db.hpp  ppa_display.cpp  ppa_display.hpp  ui.cpp  ui.hpp  yunet_128x96_p4.espdl  yunet_256x192_p4.espdl  yunet_384x288_p4.espdl  yunet_512x384_p4.espdl  yunet_640_p4.espdl  yunet_detect.cpp  yunet_detect.hpp
examples/human_face_recognition_live/tools/: README.md  bench_accuracy.py
models/human_face_recognition/: human_face_recognition.hpp
